--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
     <link rel="stylesheet"
-          href="style.css">
-    <script src="timerDisplay.js"></script>
-    <script src="timerPlugin.js"></script>
-    <script src="script.js"></script>
+          href="css/style.css">
+    <script src="js/timerDisplay.js"></script>
+    <script src="js/timerPlugin.js"></script>
+    <script src="js/script.js"></script>
     <title>Document</title>
 </head>
 <body>
